# workspace

./: .dockerignore  .gitattributes  .gitignore  .npmrc  .opencode  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  Cargo.toml  Containerfile.nodejs.nextjs  Containerfile.nodejs.pwa  Containerfile.nodejs.website  LICENSE.md  README.md  conftest.py  eslint.config.mjs  opencode.json  package-lock.json  package.json  pnpm-workspace.yaml  pyproject.toml  setup.sh  tsconfig.app.json  tsconfig.lib.json  tsconfig.typedoc.json  typedoc.json  vite.config.ts  vitest.config.ts
.code/: nodejs.instructions.md  python.instructions.md  react.instructions.md  rust.instructions.md
.code/agents/: nextjs-app-developer.agent.md  ui-library-developer.agent.md
.code/references/: nodejs-better-promise-all.md  nodejs-lru-cache.md  vercel-dashboard-performance.md  vercel-optimize-package-imports.md
.code/scripts/: image-to-webp.sh  optimize-audio.sh
.code/skills/agents-md-generator/: SKILL.md
.code/skills/creative-frontend-design/: SKILL.md
.code/skills/skill-creator/: AUTH.md  (+7 more)
.devcontainer/: Containerfile  Dockerfile  compose.yaml  devcontainer-lock.json  devcontainer.json  docker-compose.yaml  docker-compose.yml  post-create.sh  post-start.sh
.devcontainer/files/: .gitignore
.github/: copilot-instructions.md
.storybook/: globals.css  main.ts  preview.ts  tsconfig.json  vitest.setup.ts
.storybook/decorators/: canvas.tsx  index.ts  project-styles.tsx
nodejs/: AGENTS.md  README.md
npm/: README.md
python/: AGENTS.md  README.md
rust/: README.md
stories/: intro.stories.tsx
(+78 files in other folders)
